--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
-  font: 13px Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   color: #5F6368;
   width: 300px;
 }
@@ -28,6 +32,12 @@ a:hover {
   text-decoration: none;
   display: block;
   padding-bottom: 25px;
+}
+
+a:hover h2,
+a:hover div
+{
+  text-decoration: underline;
 }
 
 .loading {
@@ -110,7 +120,7 @@ h2 em {
 
 .parcelas {
   /* float: left; */
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 14px;
   color: #808080
 }
