--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,8 @@ a:hover {
   text-decoration: none;
   display: block;
   padding-bottom: 25px;
+  padding-right: 10px;
+  text-align: right;
 }
 
 a:hover h2,
@@ -43,15 +45,6 @@ a:hover div
 .loading {
   text-align: center;
 }
-
-/* .Widget350x130 {
-  text-shadow: #fff 0 1px 0;
-  background: #fff;
-  font: 13px Arial, Helvetica, sans-serif;
-  position: relative;
-  color: #aaa;
-  float: left
-} */
 
 .current {
   background: #fff;
@@ -68,12 +61,39 @@ a:hover div
 }
 
 .thumb {
-  width: 120px;
-  height: 100px;
+  /* width: 120px;
+  height: 100px; */
   /* border: 1px solid #eee; */
   display: block;
-  margin: auto
+  margin: auto;
+
+  /* width: 100px; */
+  /* height: 83px !important; */
+  text-align: center;
+  /* margin: 0 10px 0 0; */
+  margin-left: 10px;
+  float: left;
+  
+  /* -webkit-transition: .3s cubic-bezier(0,1,.5,1);
+  transition: .3s cubic-bezier(0,1,.5,1); */
 }
+
+.thumb img {
+  width: 100px;
+}
+
+/* .thumb img {
+  max-width: 100px;
+  max-height: 83px;
+  border: 0;
+} */
+
+/* a:hover .thumb,
+a.hover .thumb
+{
+    -webkit-transform: scale(1.15);
+    transform: scale(1.15);
+} */
 
 .offers li {
   cursor: pointer;
@@ -84,11 +104,11 @@ a:hover div
 }
 
 .offers li.active {
-  display: block
+  display: block;
 }
 
 .offers li.unic {
-  width: 100%
+  width: 100%;
 }
 
 h2 {
@@ -99,51 +119,43 @@ h2 {
   color: #000;
   /* margin-bottom: 7px; */
   float: left;
-  width: 185px;
+  width: 180px;
+  line-height: 1.4;
+  
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  /* height: 26px; */
+  height: 37px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 h2 em {
   color: #808080;
-  font-style: normal
+  font-style: normal;
 }
 
 .price {
   margin: 0;
-  font-size: 22px;
-  font-weight: bold;
+  font-size: 20px;
+  /* font-weight: bold; */
   /* text-align: center; */
   color: #3C69E4;
   display: block;
-  width: 190px;
-  float: left;
+  /* width: 190px;
+  float: left; */
 }
 
 .parcelas {
   /* float: left; */
   /* font-weight: bold; */
   font-size: 14px;
-  color: #808080
+  color: #808080;
 }
 
 .parcelas em {
   font-style: normal;
-  font-size: 13px
+  font-size: 13px;
 }
-
-.Widget350x130 .thumb {
-  width: 100px;
-  height: 83px !important;
-  text-align: center;
-  margin: 0 10px 0 0;
-  float: left
-}
-
-.Widget350x130 .thumb img {
-  max-width: 100px;
-  max-height: 83px;
-  border: 0
-}
-
-/* .Widget350x130 .offers {
-  position: relative
-} */
